Update basic-touch to multi-finger drawing and add to index
- Enhanced basic-touch example to support multiple fingers simultaneously
- Each finger gets its own color trail with HSB color mode
- Shows active finger count and cleanup for inactive trails
- Added Multi-Touch Drawing card to Other Demos section in index.html
- Includes QR code for easy mobile access

--- a/index.html
+++ b/index.html
@@ -341,6 +341,17 @@
                 
                 <div class="examples-grid">
                     <div class="example-card">
+                        <div class="example-title">Multi-Touch Drawing</div>
+                        <div class="example-description">Draw with multiple fingers simultaneously - each finger gets its own color trail.</div>
+                        <div class="example-links">
+                            <div class="link-row">
+                                <a href="https://digitalfuturesocadu.github.io/mobile-p5-permissions/examples/basic-touch/" class="demo-link" target="_blank">Try Demo</a>
+                                <canvas class="qr-code" data-url="https://digitalfuturesocadu.github.io/mobile-p5-permissions/examples/basic-touch/"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="example-card">
                         <div class="example-title">Microphone Demo</div>
                         <div class="example-description">Interactive audio visualization using device microphone input.</div>
                         <div class="example-links">
