--- a/examples/basicGif/index.html
+++ b/examples/basicGif/index.html
@@ -11,40 +11,8 @@
     <!-- Load mobile permissions library -->
     <script src="https://cdn.jsdelivr.net/npm/mobile-p5-permissions@1.2.0/src/permissionsAll.js"></script>
     
-    <!-- Basic mobile-friendly CSS -->
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            -webkit-user-select: none;
-            user-select: none;
-            -webkit-tap-highlight-color: transparent;
-            -webkit-touch-callout: none;
-        }
-
-        html, body {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            position: fixed;
-            touch-action: none;
-            background: #000;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-        }
-
-        canvas {
-            display: block;
-            position: fixed;
-            left: 0;
-            top: 0;
-        }
-
-        /* Hide scrollbars on mobile */
-        ::-webkit-scrollbar {
-            display: none;
-        }
-    </style>
+    <!-- Load mobile-optimized styles -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Your p5.js sketch will be loaded here -->
