--- a/examples/button-vs-orientation/index.html
+++ b/examples/button-vs-orientation/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
-    <script src="../../src/permissionsAll.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mobile-p5-permissions@1.4.4/dist/p5.mobile-permissions.min.js"></script>
     <script src="sketch.js"></script>
 </body>
 </html>
