--- a/examples/button-vs-shake/index.html
+++ b/examples/button-vs-shake/index.html
@@ -37,7 +37,7 @@
   </style>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/gh/DigitalFuturesOCADU/mobile-p5-permissions@main/src/permissionsAll.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mobile-p5-permissions@1.4.4/dist/p5.mobile-permissions.min.js"></script>
 </head>
 <body>
   <script src="sketch.js"></script>
