--- a/examples/full-sensors/index.html
+++ b/examples/full-sensors/index.html
@@ -68,7 +68,7 @@
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-  <script src="../../src/permissionsAll.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mobile-p5-permissions@1.4.4/dist/p5.mobile-permissions.min.js"></script>
 </head>
 <body>
   <button id="startButton">START FULL DEMO</button>
