--- a/examples/gyroscope-demo/index.html
+++ b/examples/gyroscope-demo/index.html
@@ -67,7 +67,7 @@
   </style>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
-  <script src="../../src/permissionsGyro.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mobile-p5-permissions@1.4.4/dist/p5.mobile-permissions.min.js"></script>
 </head>
 <body>
   <button id="startButton">START GAME</button>
